--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo/webpack-config": "^19.0.0",
     "@react-navigation/native": "^6.1.8",
     "@react-navigation/native-stack": "^6.9.14",
+    "axios": "^1.5.1",
     "expo": "~49.0.13",
     "expo-status-bar": "~1.6.0",
     "ios": "^0.0.1",
@@ -20,13 +21,13 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
     "react-native-heroicons": "^3.2.0",
+    "react-native-reanimated": "~3.3.0",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-svg": "^13.14.0",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "^3.3.2",
-    "react-native-reanimated": "~3.3.0"
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
