--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.1",
     "expo": "^49.0.15",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "^0.18.17",
     "ios": "^0.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
